<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="6dp"
    android:background="@drawable/shape_notification_card"
    android:elevation="2dp"
    android:minHeight="56dp"
    android:orientation="horizontal"
    android:padding="0dp">
    <!-- Accent bar mor home page List view-->
    <View
        android:layout_width="4dp"
        android:layout_height="match_parent"
        android:background="@drawable/main_activity_accent_bar" />

    <TextView
        android:id="@+id/itemid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="10dp"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/imgview"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center_vertical"
        android:layout_margin="10dp"
        android:contentDescription="@string/itemImg" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="20dp"
            android:text="@string/name"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/typetv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="20dp"
            android:text="@string/type"
            android:textColor="#999595"
            android:textSize="15sp"
            android:textStyle="normal" />
    </LinearLayout>


</LinearLayout>