<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5e6472"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".ui.activities.MainActivity">
    <!-- Title -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="3"
            android:background="@drawable/shape_title"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/tv_title"
            android:textColor="#FCFFFF"
            android:textSize="16sp"
            android:textStyle="bold" />
        <!-- Img for language reference -->
        <ImageButton
            android:id="@+id/btn_lng"
            android:layout_width="50dp"
            android:layout_height="45dp"
            android:background="@null"
            android:contentDescription="@string/imgDscrip"
            android:scaleType="centerInside" />
    </LinearLayout>
    <!-- options of items types  -->
    <Spinner
        android:id="@+id/spinner_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:background="@drawable/shape_decor_spinner"
        android:gravity="center_horizontal" />
    <!-- list of items  -->
    <ListView
        android:id="@+id/customlv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:layout_weight="1"
        android:background="@drawable/shape_notification_list_bg"
        android:clipToPadding="false"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"  />


    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="8dp"

        >

        <!-- buttons to navigate to notices  -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_notice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:background="#3a7ca5"
            android:text="@string/titleNotice"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCreateMainV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#fb8b24"
            android:text="@string/newArticle"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>


</LinearLayout>